fixed spacing

--- a/src/components/side-bar/side-bar.module.scss
+++ b/src/components/side-bar/side-bar.module.scss
@@ -17,7 +17,7 @@
 }
 .logo-wrapper {
   padding-top: 57px;
-  margin: 0px 0px 61px;
+  margin: 0px 0px 40px;
 }
 .top-side-buttons-wrapper {
   border-bottom: 1px solid #4b4b99;
